# target

./: CMakeLists.txt  Doxyfile  README.md  directional_light_reference_mirror_02.ppm  perspective_3_blinn_spheres_900_450.ppm  result.txt  scene.ppm
descriptions/: 3-dragon.xml  dragon_castle.xml  millenium-falcon.xml  mirror_spheres.xml  orthographic_depth_spheres.xml  orthographic_spheres_row.xml  perspective_3_blinn_spheres_900_450.xml  perspective_depth_spheres.xml  perspective_directional_3_spheres.xml  perspective_directional_light_reference_mirror_02.xml  perspective_flat_spheres.xml  perspective_point_light_reference_mirror_02.xml  perspective_spot_3_spheres.xml  perspective_spot_light_reference_mirror_02.xml  perspective_white_spot_3_spheres.xml  pyramids.xml  teapot_and_plane.xml  teapot_plane_sphere_bvh.xml  test_transform.xml  two_triangles_plane.xml  two_triangles_plane_obj.xml
docs/: _ambient_light_8h.html  _ambient_light_8h_source.html  _b_v_h_accel_8h.html  _b_v_h_accel_8h.js  _b_v_h_accel_8h_source.html  _background_8h.html  _background_8h_source.html  _blinn_phong_integrator_8h.html  _blinn_phong_integrator_8h_source.html  _blinn_phong_material_8h.html  _blinn_phong_material_8h_source.html  _bounds3_8h.html  _bounds3_8h.js  _bounds3_8h_source.html  _buffer_8h.html  _buffer_8h.js  _buffer_8h_source.html  _camera_8h.html  _camera_8h_source.html  _depth_map_integrator_8h.html  _depth_map_integrator_8h_source.html  _descriptor_8h.html  _descriptor_8h_source.html  _directional_light_8h.html  _directional_light_8h_source.html  _flat_integrator_8h.html  (+345 more)
(+196 files in other folders)
